--- a/app/src/main/res/layout/fragment__search.xml
+++ b/app/src/main/res/layout/fragment__search.xml
@@ -58,10 +58,11 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:textColor="@color/black"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="25dp"
             android:hint="Bạn muốn nghe gì?"
             android:background="@color/white"
-            android:paddingLeft="20dp"
+            android:paddingLeft="15dp"
+            android:drawablePadding="8dp"
             android:drawableLeft="@drawable/baseline_search_24"
             />
 
