--- a/app/src/main/res/layout/activity_actitvy_artist.xml
+++ b/app/src/main/res/layout/activity_actitvy_artist.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Actitvy_Artist">
+    tools:context=".Activity_Artist">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
