--- a/app/src/main/res/layout/activity_detail_playlist.xml
+++ b/app/src/main/res/layout/activity_detail_playlist.xml
@@ -13,8 +13,8 @@
     <ImageView
         android:id="@+id/imgPlayListDetail"
         android:layout_marginTop="25dp"
-        android:layout_width="230dp"
-        android:layout_height="230dp"
+        android:layout_width="480px"
+        android:layout_height="480px"
         android:layout_gravity="center_horizontal"
         app:srcCompat="@drawable/yeuthich" />
 
@@ -25,13 +25,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tvNamePlaylist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="30sp"
             android:gravity="bottom"
             android:textStyle="bold"
-            android:text="Tình cờ yêu em"/>
+            android:text="Name playlist"/>
         <ListView
             android:id="@+id/lvTrackOfPlaylist"
             android:layout_width="match_parent"
