--- a/app/src/main/res/layout/activity_detail_playlist.xml
+++ b/app/src/main/res/layout/activity_detail_playlist.xml
@@ -20,7 +20,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:paddingLeft="13dp"
-            android:background="@color/black"
+            android:background="#00000000"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
     </LinearLayout>
 
