--- a/app/src/main/res/layout/fragment__home.xml
+++ b/app/src/main/res/layout/fragment__home.xml
@@ -51,7 +51,7 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollHome"
         android:layout_width="match_parent"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="100dp"
         android:layout_height="wrap_content">
 
         <LinearLayout
@@ -62,6 +62,19 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recGridPlayListCuaBan"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="vertical"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
                 android:orientation="vertical">
 
                 <TextView
