--- a/app/src/main/res/layout/layout_item_track_bigger.xml
+++ b/app/src/main/res/layout/layout_item_track_bigger.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="160dp"
     android:layout_height="wrap_content"
     android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
@@ -28,12 +28,13 @@
 
     <TextView
         android:id="@+id/tvTitleDanhChoBan"
-        android:gravity="left"
-        android:textColor="#B3B3B3"
-        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:text="TextView" />
+        android:layout_marginTop="5dp"
+        android:gravity="fill|center_vertical"
+        android:text="TextView"
+        android:textAlignment="gravity"
+        android:textColor="#B3B3B3"
+        android:textSize="18sp" />
 
 </LinearLayout>
