--- a/app/src/main/res/layout/activity_play_track.xml
+++ b/app/src/main/res/layout/activity_play_track.xml
@@ -11,8 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="20dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -24,27 +24,29 @@
                 android:layout_height="50dp"
                 android:layout_marginLeft="30dp"
                 android:background="@drawable/baseline_arrow_back_ios_24" />
-            <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="Đang phát nhạc từ album" />
-            <TextView
-                android:id="@+id/tvNameAlbumPlay"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:text="À Lôi" />
-        </LinearLayout>
+                android:layout_centerInParent="true"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Đang phát nhạc từ album"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tvNameAlbumPlay"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="À Lôi"
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
 
             <Button
@@ -58,7 +60,7 @@
 
     </LinearLayout>
 
-   <LinearLayout
+    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="33dp"
@@ -182,4 +184,14 @@
 
        </LinearLayout>
    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"></LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
