--- a/app/src/main/res/layout/layout_item_list_track_playlist.xml
+++ b/app/src/main/res/layout/layout_item_list_track_playlist.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="10dp">
+    android:paddingHorizontal="8dp"
+    >
 
 
     <ImageView
         android:id="@+id/imgTrackOfPlaylist"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         app:srcCompat="@drawable/avt" />
 
     <LinearLayout
@@ -23,14 +24,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="23dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:text="Angro Ra Hill" />
 
         <TextView
             android:id="@+id/tvOwnerTrackOfPlaylist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#7E7E7E"
+            android:textColor="#CFCFCF"
             android:textSize="18dp"
             android:text="Donal" />
 
