--- a/app/src/main/res/layout/fragment_detail_playlist.xml
+++ b/app/src/main/res/layout/fragment_detail_playlist.xml
@@ -49,7 +49,7 @@
         <ListView
             android:id="@+id/lvTrackOfPlaylist"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="320dp"
             />
         <TextView
             android:layout_width="match_parent"
