--- a/app/src/main/res/layout/fragment__search.xml
+++ b/app/src/main/res/layout/fragment__search.xml
@@ -69,19 +69,22 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <GridView
-                android:layout_marginTop="20dp"
-                android:id="@+id/GridResultSearchTrack"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ListView
+                android:layout_marginVertical="20dp"
+                android:id="@+id/LvResultSearchTrack"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 />
-            <GridView
-                android:layout_marginTop="20dp"
-                android:id="@+id/GridResultSearchArtist"
+            <ListView
+                android:layout_marginVertical="20dp"
+                android:id="@+id/LvResultSearchArtist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 />
         </LinearLayout>
