--- a/app/src/main/res/layout/layout_item_grid_search_artist.xml
+++ b/app/src/main/res/layout/layout_item_grid_search_artist.xml
@@ -3,19 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/black">
+    android:layout_marginBottom="20dp"
+    android:orientation="vertical"
+    android:background="#000000">
 
 
     <ImageView
         android:id="@+id/imgSearchArtist"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="412dp"
+        android:layout_height="412dp"
+        android:scaleType="centerCrop"
         app:srcCompat="@drawable/avt" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:padding="15dp"
+        android:layout_marginTop="-10dp"
         android:orientation="vertical">
 
         <TextView
@@ -23,16 +27,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="23dp"
-            android:drawableRight="@drawable/baseline_check_24"
-            android:text="Thầy Giáo Ba" />
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="Angro Ra Hill" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#A5A2A2"
-            android:textSize="18dp"
-            android:text="Nghệ sĩ" />
+            android:textSize="16dp"
+            android:text="Bai hat -" />
     </LinearLayout>
 </LinearLayout>
