--- a/app/src/main/res/layout/fragment__home.xml
+++ b/app/src/main/res/layout/fragment__home.xml
@@ -36,14 +36,22 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/tvNameUser"
-                android:layout_width="0dp"
+                android:id="@+id/tv"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:layout_weight="5"
                 android:textColor="@color/white"
-                android:text="Hi, JohnWeak"
+                android:text="Hi,"
                 android:layout_marginLeft="20dp"
+                android:textSize="26sp"/>
+            <TextView
+                android:id="@+id/tvNameUser"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/white"
+                android:text="User Name"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="10dp"
                 android:textSize="26sp"/>
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
