--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
      <!-- Radius in density-independent pixels (dp) -->
     <gradient
-        android:startColor="#000000"
-        android:endColor="#333333"
+        android:startColor="#D8000000"
+        android:endColor="#8F444444"
         android:angle="90" /> <!-- Gradient angle, 0 means left to right -->
 </shape>
