--- a/app/src/main/res/layout/activity_loader_home.xml
+++ b/app/src/main/res/layout/activity_loader_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#FAFAFA"
-    tools:context=".Loader">
+    tools:context=".Loader_Home">
 
     <ImageView
         android:id="@+id/imageView"
