--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -4,22 +4,22 @@
 
     <item
         android:id="@+id/home"
-        android:title=""
+        android:title="Home"
         android:icon="@drawable/baseline_home_24"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         />
 
     <item
         android:id="@+id/search"
-        android:title=""
+        android:title="Search"
         android:icon="@drawable/baseline_search_24"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         />
 
     <item
         android:id="@+id/library"
-        android:title=""
+        android:title="Library"
         android:icon="@drawable/baseline_library_music_24"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         />
 </menu>
