--- a/app/src/main/res/layout/fragment__search.xml
+++ b/app/src/main/res/layout/fragment__search.xml
@@ -33,7 +33,7 @@
                     app:cardCornerRadius="35dp">
 
                     <ImageView
-                        android:id="@+id/imgUser"
+                        android:id="@+id/imgUserSearch"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
@@ -41,7 +41,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <TextView
-                    android:id="@+id/tvNameUser"
+                    android:id="@+id/tvNameUserSearch"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
