--- a/app/src/main/res/layout/fragment__play__track.xml
+++ b/app/src/main/res/layout/fragment__play__track.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/black"
-    tools:context=".Activity_PlayTrack">
+    android:background="@color/black">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <Button
+            <ImageButton
                 android:id="@+id/btnBackPage"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -47,7 +46,7 @@
             </LinearLayout>
 
 
-            <Button
+            <ImageButton
                 android:id="@+id/btnMore"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -64,11 +63,11 @@
         android:paddingHorizontal="33dp"
         android:orientation="vertical">
         <androidx.cardview.widget.CardView
-            android:layout_width="350dp"
-            android:layout_height="350dp"
+            android:layout_width="320dp"
+            android:layout_height="320dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
-
-            app:cardCornerRadius="30dp">
+            app:cardCornerRadius="1000000dp">
 
             <ImageView
                 android:id="@+id/imgTrackPlay"
@@ -109,11 +108,10 @@
                     android:text="Double 2T" />
             </LinearLayout>
 
-            <Button
+            <ImageButton
                 android:id="@+id/btnAddLib"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:text=""
                 android:layout_gravity="center"
                 android:background="@drawable/baseline_add_circle_outline_24" />
