--- a/app/src/main/res/layout/fragment__search.xml
+++ b/app/src/main/res/layout/fragment__search.xml
@@ -70,20 +70,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <GridView
-                android:layout_marginTop="20dp"
-                android:id="@+id/GridResultSearchTrack"
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recGridSearch"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                />
-            <GridView
-                android:layout_marginTop="20dp"
-                android:id="@+id/GridResultSearchArtist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                />
+                android:layout_height="match_parent"
+                android:scrollbars="vertical" />
         </LinearLayout>
 
     </LinearLayout>
