--- a/app/src/main/res/layout/fragment__search.xml
+++ b/app/src/main/res/layout/fragment__search.xml
@@ -52,13 +52,17 @@
                     android:textSize="26sp"/>
             </LinearLayout>
         </com.google.android.material.appbar.AppBarLayout>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            app:cardCornerRadius="12dp">
 
         <EditText
             android:id="@+id/edtInputSearch"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:textColor="@color/black"
-            android:layout_marginTop="25dp"
             android:hint="Bạn muốn nghe gì?"
             android:background="@color/white"
             android:paddingLeft="15dp"
@@ -66,16 +70,18 @@
             android:drawableLeft="@drawable/baseline_search_24"
             />
 
-
+        </androidx.cardview.widget.CardView>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="50dp"
+            android:paddingLeft="20dp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recGridSearch"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="vertical" />
+                android:scrollbars="none" />
         </LinearLayout>
 
     </LinearLayout>
