--- a/app/src/main/res/layout/fragment_detail_playlist.xml
+++ b/app/src/main/res/layout/fragment_detail_playlist.xml
@@ -1,79 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/linearActivityArtist"
-    android:background="@drawable/gradient_background_detail_playlist"
-    >
+    android:background="@drawable/gradient_background_detail_playlist">
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollDetailPlaylist"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <ImageButton
-            android:id="@+id/btnBack"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:paddingLeft="13dp"
-            android:background="#00000000"
-            app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
+        <LinearLayout
+            android:id="@+id/linearActivityArtist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/btnBack"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:paddingLeft="13dp"
+                android:background="#00000000"
+                app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imgPlayListDetail"
+            android:layout_marginTop="25dp"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center_horizontal"
+            app:srcCompat="@drawable/yeuthich" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvNamePlaylist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="26sp"
+                android:gravity="bottom"
+                android:textStyle="bold"
+                android:text="Name playlist"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvTrackOfPlaylist"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginTop="10dp" />
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:gravity="bottom"
+                android:textStyle="bold"
+                android:text="Bài hát gợi ý"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textColor="#81FFFFFF"
+                android:textSize="20sp"
+                android:gravity="bottom"
+                android:text="Dựa trên các bài hát trong playlist này"/>
+            <!--        <ListView-->
+            <!--            android:id="@+id/lvRecommentPlaylist"-->
+            <!--            android:layout_marginTop="15dp"-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="500dp"-->
+            <!--            android:paddingBottom="100dp"-->
+            <!--            />-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1000dp"/>
+        </LinearLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imgPlayListDetail"
-        android:layout_marginTop="25dp"
-        android:layout_width="550px"
-        android:layout_height="550px"
-        android:layout_gravity="center_horizontal"
-        app:srcCompat="@drawable/yeuthich" />
+</androidx.core.widget.NestedScrollView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp"
-        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvNamePlaylist"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            android:gravity="bottom"
-            android:textStyle="bold"
-            android:text="Name playlist"/>
-        <ListView
-            android:id="@+id/lvTrackOfPlaylist"
-            android:layout_width="match_parent"
-            android:layout_height="320dp"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:gravity="bottom"
-            android:textStyle="bold"
-            android:text="Bài hát gợi ý"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textColor="#81FFFFFF"
-            android:textSize="20sp"
-            android:gravity="bottom"
-            android:text="Dựa trên các bài hát trong playlist này"/>
-        <ListView
-            android:id="@+id/lvRecommentPlaylist"
-            android:layout_marginTop="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="100dp"
-            />
-    </LinearLayout>
-</LinearLayout>
+
+
+</FrameLayout>
