--- a/app/src/main/res/layout/layout_item_list_track_playlist.xml
+++ b/app/src/main/res/layout/layout_item_list_track_playlist.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="8dp"
-    >
+    android:orientation="horizontal"
+    android:paddingHorizontal="8dp">
 
 
     <ImageView
@@ -14,16 +14,17 @@
         app:srcCompat="@drawable/avt" />
 
     <LinearLayout
-        android:layout_width="220dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="15dp"
+        android:paddingLeft="10dp"
+        android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvNameTrackOfPlaylist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="23dp"
+            android:textSize="18sp"
             android:textColor="@color/white"
             android:text="Angro Ra Hill" />
 
@@ -32,18 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#CFCFCF"
-            android:textSize="18dp"
+            android:textSize="16sp"
             android:text="Donal" />
 
     </LinearLayout>
-    <ImageButton
-        android:id="@+id/btnRemoveToPlaylist"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="#00FFFFFF"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        app:srcCompat="@drawable/baseline_do_disturb_24">
-
-    </ImageButton>
 </LinearLayout>
