--- a/app/src/main/res/layout/fragment__play__track.xml
+++ b/app/src/main/res/layout/fragment__play__track.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/black">
+    android:id="@+id/lnPlayTrack"
+>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -155,7 +156,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/black"
+                android:background="#00000000"
                 app:srcCompat="@drawable/baseline_keyboard_double_arrow_left_24" />
 
             <ImageButton
@@ -163,7 +164,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/black"
+                android:background="#00000000"
                 android:src="@drawable/baseline_play_circle_24" />
 
             <ImageButton
@@ -171,7 +172,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/black"
+                android:background="#00000000"
                 app:srcCompat="@drawable/baseline_keyboard_double_arrow_right_24" />
 
         </LinearLayout>
