--- a/app/src/main/res/layout/fragment_detail_playlist.xml
+++ b/app/src/main/res/layout/fragment_detail_playlist.xml
@@ -60,6 +60,7 @@
                 android:id="@+id/rvTrackOfPlaylist"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
+                android:scrollbars="vertical"
                 android:layout_marginTop="10dp" />
                 />
             <TextView
@@ -90,6 +91,7 @@
                 android:id="@+id/recViewTrackGoiY"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
+                android:scrollbars="vertical"
                 android:layout_marginTop="10dp" />
             <LinearLayout
                 android:layout_width="match_parent"
