--- a/app/src/main/res/layout/layout_item_track.xml
+++ b/app/src/main/res/layout/layout_item_track.xml
@@ -5,6 +5,7 @@
     android:layout_width="100dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
+    android:layout_marginRight="10dp"
     android:orientation="vertical">
 
 
