--- a/app/src/main/res/layout/fragment__search.xml
+++ b/app/src/main/res/layout/fragment__search.xml
@@ -71,10 +71,11 @@
             />
 
         </androidx.cardview.widget.CardView>
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="50dp"
+            android:layout_marginTop="10dp"
             android:paddingLeft="20dp">
 
             <androidx.recyclerview.widget.RecyclerView
@@ -82,7 +83,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="none" />
-        </LinearLayout>
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/lottieAnimationView"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_marginTop="150dp"
+                android:layout_marginLeft="25dp"
+                android:layout_gravity="center_vertical"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/load_search"
+                tools:ignore="MissingConstraints" />
+        </RelativeLayout>
+
 
     </LinearLayout>
 </FrameLayout>
