--- a/app/src/main/res/layout/fragment__play__track.xml
+++ b/app/src/main/res/layout/fragment__play__track.xml
@@ -155,7 +155,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/black"
+                android:background="#00000000"
                 app:srcCompat="@drawable/baseline_casino_24" />
             <ImageButton
                 android:id="@+id/btnBackTrack"
@@ -187,7 +187,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/black"
+                android:background="#00000000"
                 app:srcCompat="@drawable/baseline_loop_24_white" />
 
         </LinearLayout>
