--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -51,6 +51,7 @@
         android:layout_height="60dp"
         android:layout_gravity="bottom"
         android:layout_marginBottom="60dp"
+        android:visibility="invisible"
         android:background="@color/black">
 
         <!-- Add music name, image, or any other content here -->
