--- a/app/src/main/res/layout/fragment_detail_playlist.xml
+++ b/app/src/main/res/layout/fragment_detail_playlist.xml
@@ -65,6 +65,7 @@
                 android:layout_marginTop="10dp" />
                 />
             <TextView
+                android:id="@+id/txtTitleRec"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
@@ -74,6 +75,7 @@
                 android:textStyle="bold"
                 android:text="Bài hát gợi ý"/>
             <TextView
+                android:id="@+id/txtDescRec"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
