--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -110,7 +110,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
-                    android:textSize="15dp"
+                    android:textSize="13dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:singleLine="true"
@@ -120,17 +120,32 @@
                     android:text="NgheSi" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/btnStopnPlay"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:text="Button" />
-            </LinearLayout>
+            <ImageButton
+                android:id="@+id/btnBackPlay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#00000000"
+                android:layout_marginTop="13dp"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/baseline_favorite_border_24" />
+            <ImageButton
+                android:id="@+id/btnPausePlay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#00000000"
+                android:layout_marginTop="13dp"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/baseline_play_arrow_24" />
+            <ImageButton
+                android:id="@+id/btnNextPlay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#00000000"
+                android:layout_marginTop="13dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/baseline_skip_next_24" />
 
         </LinearLayout>
 
