--- a/app/src/main/res/layout/fragment__play__track.xml
+++ b/app/src/main/res/layout/fragment__play__track.xml
@@ -179,6 +179,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginTop="-5dp"
                 android:background="#00000000"
                 android:src="@drawable/baseline_play_circle_24" />
 
