--- a/app/src/main/res/layout/fragment__home.xml
+++ b/app/src/main/res/layout/fragment__home.xml
@@ -5,21 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragment_Home"
-    android:background="@color/black"
+    android:background="@drawable/gradient_backgroundlight"
     android:padding="10dp"
     android:id="@+id/framelayout_home">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@color/black"
-        android:theme="@style/MaterialAlertDialog.Material3">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#00FFFFFF"
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
@@ -54,7 +49,6 @@
                 android:layout_marginLeft="10dp"
                 android:textSize="26sp"/>
         </LinearLayout>
-    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollHome"
