--- a/app/src/main/res/layout/fragment__search.xml
+++ b/app/src/main/res/layout/fragment__search.xml
@@ -4,27 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@drawable/gradient_backgroundlight"
     tools:context=".Fragment_Search">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp"
+        android:padding="15dp"
         android:orientation="vertical">
-
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@color/black"
-            android:theme="@style/MaterialAlertDialog.Material3">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#00FFFFFF"
                 android:orientation="horizontal">
 
                 <androidx.cardview.widget.CardView
@@ -51,7 +43,6 @@
                     android:layout_marginLeft="20dp"
                     android:textSize="26sp"/>
             </LinearLayout>
-        </com.google.android.material.appbar.AppBarLayout>
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -80,17 +71,6 @@
             android:paddingBottom="50dp"
             android:layout_marginLeft="-7dp"
             android:layout_marginTop="10dp">
-            <TextView
-                android:id="@+id/tvhttgd"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="20dp"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="Hãy tìm tên gì đó">
-            </TextView>
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recGridSearch"
                 android:layout_width="match_parent"
@@ -101,8 +81,8 @@
                 android:layout_width="300dp"
                 android:layout_height="300dp"
                 android:layout_marginTop="150dp"
-                android:layout_marginLeft="25dp"
-                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="45dp"
+                android:layout_gravity="center"
                 app:lottie_autoPlay="true"
                 app:lottie_loop="true"
                 app:lottie_rawRes="@raw/load_search"
